@@ -81,10 +81,10 @@
 	 	 	destdir="${commons.attributes.tempdir.src}" 
 	 	 >
 	 	 	<!-- 
-	 	 		Only the PathMap attribute in the org.springframework.web.servlet.handler.commonsattributes
+	 	 		Only the PathMap attribute in the org.springframework.web.servlet.handler.metadata
 	 	 	 package currently needs to be shipped with an attribute, to support indexing.
 	 	 	 -->
-	         <fileset dir="${src.dir}" includes="**/commonsattributes/*.java"/>
+	         <fileset dir="${src.dir}" includes="**/metadata/*.java"/>
 	     </attribute-compiler>
  	</target>
 
