@@ -16,6 +16,8 @@ Package org.springframework.aop
 * added aop.framework.adapter package to allow for new Advisor/advice types without changing the basic AOP framework
 
 Package org.springframework.beans
+* added registerBeanOfClass() method to AutowireCapableBeanFactory, allowing external classes to be plugged into ApplicationContexts
+and most BeanFactory implementations, benefiting from autowiring
 * added BeanDefinitionRegistryLocation: this parameter must be provided to construct an XmlBeanFactory, and enables more specific error messages on parse failures
 * removed event propagation support in BeanWrapper
 * added FileEditor to standard PropertyEditors, for creating java.io.File instances from String representations
@@ -96,6 +98,7 @@ Package org.springframework.validation
 * added "getValuesForProperty" and "toCodeForProperty" methods to Constants helper class
 
 Package org.springframework.web
+* added attribute-driven Controller mapping, in org.springframework.web.servlet.handler.metadata package
 * added "getOrCreateSessionAttribute" helper method to WebUtils, for on-demand state objects in a web tier
 * introduced GenericFilterBean and OncePerRequestFilter base classes in package org.springframework.web.filter
 * reworked MultipartFilter to extend GenericFilterBean/OncePerRequestFilter
